# dig-offers

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: publish.yml  release.yml
src/: cancel.rs  combine.rs  error.rs  hydrate.rs  lib.rs  make.rs  offer_id.rs  sign.rs  summarize.rs  take.rs  test_support.rs  types.rs
